--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,15 @@
 
     <com.example.customsliderassignment.NumberSwitcher
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content">
+
+
+
+
+    </com.example.customsliderassignment.NumberSwitcher>
+
+
+
 
     <!---
     <TextView
